# rnbo-adc-workshop

./: README.md
rnbo-command-line/: README.md
rnbo-command-line/export/: am-mod.cpp  description.json
rnbo-command-line/patches/: am-tester.maxpat
rnbo-command-line/src/: .gitignore  CMakeLists.txt  main.cpp
rnbo-command-line/src-finish/: .gitignore  CMakeLists.txt  main.cpp
rnbo-command-line/src-finish/export/: README.md  effect.cpp  rnbo.pitchshifter.cpp
rnbo-custom-vst/: README.md
rnbo-custom-vst/export/: README.md  description.json  presets.json  rnbo_source.cpp
rnbo-custom-vst/export/rnbo/: version.cmake
rnbo-custom-vst/export/rnbo/common/: RNBO_Version.h
rnbo-custom-vst/patches/: blob-synth.maxpat
rnbo-custom-vst/src/: BlobComponent.h  RNBO_JuceAudioProcessorEditor.cpp  RNBO_JuceAudioProcessorEditor.h  RNBO_JuceAudioProcessorEditor_final.cpp  RNBO_JuceAudioProcessorEditor_final.h
rnbo-rpi-interface/: README.md
rnbo-rpi-interface/patches/: 14112022-fishsynth-simple.maxpat  19102022-fishsynth.maxpat
rnbo-rpi-interface/src/: gpio.js
rnbo-web-app/: README.md  index.html
rnbo-web-app/export/: patch.export.json
rnbo-web-app/patches/: auto-granulator-start.maxpat  auto-granulator.maxpat
rnbo-web-app/src/: app-final.js  app.js  index.html
rnbo-web-app/style/: style.css
